WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133840
Fix assertions under JSC::setNeverInline() when running js tests in WebKitTestRunner
https://bugs.webkit.org/show_bug.cgi?id=133840
Summary
Fix assertions under JSC::setNeverInline() when running js tests in WebKitTes...
Simon Fraser (smfr)
Reported
2014-06-12 21:52:52 PDT
Fix assertions under JSC::setNeverInline() when running js tests in WebKitTestRunner
Attachments
Patch
(1.66 KB, patch)
2014-06-12 21:53 PDT
,
Simon Fraser (smfr)
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-06-12 21:53:38 PDT
Created
attachment 233025
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-06-12 21:57:10 PDT
http://trac.webkit.org/changeset/169930
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug