Fix assertions under JSC::setNeverInline() when running js tests in WebKitTestRunner https://bugs.webkit.org/show_bug.cgi?id=133840

Reviewed by Filip Pizlo.

Fix ASSERT(exec->vm().currentThreadIsHoldingAPILock()); under JSC::setNeverInline()
when running DFG tests.

* API/JSCTestRunnerUtils.cpp:
(JSC::numberOfDFGCompiles):
(JSC::setNeverInline):

Canonical link: https://commits.webkit.org/151808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169930 268f45cc-cd09-0410-ab3c-d52691b4dbfc