Source/JavaScriptCore/API/JSCTestRunnerUtils.cpp
@@ -35,12 +35,14 @@ namespace JSC {
 JSValueRef numberOfDFGCompiles(JSContextRef context, JSValueRef theFunctionValueRef)
 {
     ExecState* exec= toJS(context);
+    JSLockHolder holder(exec);
     return toRef(exec, numberOfDFGCompiles(toJS(exec, theFunctionValueRef)));
 }
 
 JSValueRef setNeverInline(JSContextRef context, JSValueRef theFunctionValueRef)
 {
     ExecState* exec= toJS(context);
+    JSLockHolder holder(exec);
     return toRef(exec, setNeverInline(toJS(exec, theFunctionValueRef)));
 }
 
